exemplo de comunicação com rest client

--- a/microservice_a/src/main/resources/application.properties
+++ b/microservice_a/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-# Configuration file
-# key = value
+quarkus.http.port=8085
+
+#Rest client configuration
+org.acme.rest.restclient.DatabaseService/mp-rest/url=http://localhost:8086/ # 
+org.acme.rest.restclient.DatabaseService/mp-rest/scope=javax.inject.Singleton
