--- a/microservice_b/src/main/resources/application.properties
+++ b/microservice_b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-# Configuration file
-# key = value
+quarkus.http.port=8086
+quarkus.datasource.url = jdbc:postgresql://localhost:5432/example
+quarkus.datasource.driver = org.postgresql.Driver
+quarkus.datasource.username = admin
+quarkus.datasource.password = admin
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation = drop-and-create
+
